# SISSA-Parallel_FFT

./: .gitignore  .travis.yml  README.md
D1-exercise1/my_code/: CMakeLists.txt  README.md  export.sh  import.sh  main.cc  meson.build
D1-exercise1/my_code/include/: mpi_handler.h
solution/: .travis.yml  1024.par  128.par  256.par  512.par  README.md  env.sh  export.sh  import.sh  main.cpp  meson.build  paramfile.txt  plot.py  report.py  run.sh
solution/data/: 10698.json  12538.json  12947.json  13085.json  13544.json  13831.json  1466.json  16568.json  1752.json  20430.json  23906.json  24161.json  31979.json  4168.json  4338.json  4465.json  4605.json  4749.json  4906.json  5054.json  5203.json  5346.json  5520.json  5670.json  5817.json  5819.json  5924.json  6015.json  6137.json  6264.json  7174.json  8183.json  8267.json  8356.json  8941.json  9033.json  9214.json
solution/include/: diffusion.h  fft.h  fftw_wrapper.h  mint.h  parallel_buffer.h
solution/pkgconfig/: fftw3-mpi.pc  fftw3_mpi.pc
solution/tests/: meson.build
solution/tests/Diffusion/: meson.build  test.cpp
solution/tests/FFTW3/convolution/: 05.in  meson.build  test.cpp
solution/tests/FFTW3/inverse/: 04.in  05.in  meson.build  test.cpp
solution/tests/FFT_BruteForce/convolution/: 04.in  05.in  gen_test.py  meson.build  test.cpp
solution/tests/FFT_BruteForce/inverse/: 04.in  05.in  gen_test.py  meson.build  test.cpp
solution/tests/FFT_DivideAndConquer/convolution/: 07.in  meson.build  test.cpp
solution/tests/FFT_DivideAndConquer/inverse/: meson.build  test.cpp  test.sh
solution/tests/FFT_Iterative/convolution/: .test.cpp.swp  04.in  06.in  gen_test.py  meson.build  test.cpp
solution/tests/FFT_Iterative/inverse/: 06.in  07.in  gen_test.py  meson.build  test.cpp
solution/tests/transpose/: meson.build  test.cpp
